2006-03-23  Raja R Harinath  <rharinath@novell.com>

	* NativeConvert.generated.cs: Update after merge.

2006-02-25  Marek Safar  <marek.safar@seznam.cz>

	* NativeConvert.generated.cs: Guarded CLSCompliant attribute by NET_2_0
	until mcs is merged with gmcs.

2006-02-21  Marek Safar  <marek.safar@seznam.cz>

	* NativeConvert.generated.cs: Removed duplicated CLSCompliant attribute.

2006-01-10  Raja R Harinath  <rharinath@novell.com>

	* Syscall.cs (sys_futimes): Remove buggy custom marshaller on 'fd' parameter.

2005-01-09  Jonathan Pryor <jonpryor@vt.edu>

	* NativeConvert.cs: s/IsType/IsSet/g: deal with UnixFileSystemInfo method 
	  name change.

2005-01-02  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: s/ACCESS/ACCES/g.  I didn't create a badly named errno value, I
	  mis-read EACCES in man pages.  I can't read. :-(

2005-01-02  Jonathan Pryor <jonpryor@vt.edu>

	* NativeConvert.generated.cs: Flush (remove Obsolete members).
	* Syscall.cs: Remove invalid utimes(2) wrapper.

2005-01-02  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: s/ACCES/ACCESS/g.  How'd I create a badly named errno value?

2005-12-29  Jonathan Pryor <jonpryor@vt.edu>

	* make-map.cs: Properly handle managed arrays in argument lists.
	* Syscall.cs: Properly bind utimes(2) (the Linux man pages are vague on what
	  it does; the BSD ones are much better).  Bind lutimes(2) and futimes(2).

2005-12-27  Jonathan Pryor <jonpryor@vt.edu>

	* Syscall.cs: Include <sys/mman.h> for map.c generation.  Fixes #77091.

2005-12-27  Jonathan Pryor <jonpryor@vt.edu>

	* make-map.cs: Always include 2nd parameter of [Obsolete] attributes; mark
	  the [DllImport]ed method with [Obsolete] if the underlying type is
	  [Obsolete].
	* NativeConvert.generated.cs: Flush.

2005-12-27  Jonathan Pryor <jonpryor@vt.edu>

	* FileNameMarshaler.cs: Use UnixMarshal.PtrToStringUnix -- it's faster.

2005-11-28  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs: Prelink all SignalHandlers passed to Stdlib.signal().  This is